# chaos-game.rs

./: Cargo.toml  rule.lisp  rule.pn
examples/: answers.lisp  antlers.lisp  fern.lisp  fibonacci.lisp  levy.lisp  snowflake.lisp  spheres.lisp  tentacles.lisp
src/: lib.rs  lisp.rs  main.rs  prelude.lisp  prelude.pn  rules.rs  script.rs  shape.rs  world.rs
src/rules/: boxed.rs  branch.rs  choice.rs  color.rs  tensor.rs  transform.rs
